--- a/app/views/profile/createUserProfile.scala.html
+++ b/app/views/profile/createUserProfile.scala.html
@@ -1,4 +1,4 @@
-@(UserProfileForm: Form[models.formdata.UserProfile], element : List[Type])(implicit request: RequestHeader)
+@(UserProfileForm: Form[models.formdata.UserProfileForm], element : List[Type])(implicit request: RequestHeader)
 
 @helper.form(action = routes.UserProfileController.save()) {
 
