--- a/app/views/profile/editprofile.scala.html
+++ b/app/views/profile/editprofile.scala.html
@@ -1,6 +1,6 @@
-@(userProfileForm: Form[models.formdata.UserProfile])(implicit request: RequestHeader)
+@(userProfileForm: Form[models.formdata.UserProfileForm])(implicit request: RequestHeader)
 @import helper._
-@import models.formdata.UserProfile
+@import models.formdata.UserProfileForm
 
 <!--
 http://www.playframework.com/documentation/2.2.x/ScalaForms
