--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -85,9 +85,10 @@
                 <!-- Boxes -->
                 <div class="row margin-top">
                     @if(!startPageBoxes.isEmpty){
-                        @for( a <- 1 to 10){
+
+                        @*for( a <- 1 to 10){ *@
                             @startpage.startpageBox(startPageBoxes.get)
-                        }
+                        @*}*@
                     }
                 </div>
 
