--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -258,21 +258,10 @@ input[type="reset"]:hover
   text-align:center;
 }
 .col-centered {
-  display:inline-block;
-  float:none;
-  /* reset the text-align */
-  text-align:left;
-  /* inline-block space fix */
-  margin-right:-4px;
+  float: none;
+  margin: 0 auto;
 }
-.col-centered-right {
-  display:inline-block;
-  float:none;
-  /* reset the text-align */
-  text-align:right;
-  /* inline-block space fix */
-  margin-right:-4px;
-}
+
 
 // Banners
 .col-banner
@@ -488,10 +477,19 @@ input[type="reset"]:hover
   color:#000;
   text-shadow: none;
 }
-.navbar-toggle-custom
+.navbar-toggle-mobile-menu
 {
   padding:10px 8px 10px 8px;
   margin:0px;
+  border:1px solid;
+  background-image: linear-gradient(to bottom, lighten(@hdc-light-gray, 5%) 0px, darken(@hdc-light-gray, 15%) 100%);
+  background-color: @hdc-light-gray;
+  border-color:darken(@hdc-light-gray, 20%);
+}
+.navbar-toggle-mobile-menu:hover
+{
+  background-image: linear-gradient(to bottom, lighten(@hdc-light-gray, 10%) 0px, darken(@hdc-light-gray, 5%) 100%);
+  background-color: #fff;
 }
 .icon-bar
 {
@@ -920,6 +918,12 @@ input[type="reset"]:hover
     padding-right: 0px;
   }
 
+  // Alignment
+  .col-centered-xs {
+    float: none;
+    margin: 0 auto;
+  }
+
   // Header
   .quicklinks .nav>li>a
   {
@@ -983,6 +987,9 @@ input[type="reset"]:hover
   }
   .logo-img
   {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
     width:150px;
   }
 
