--- a/app/views/profile/updateUserProfile.scala.html
+++ b/app/views/profile/updateUserProfile.scala.html
@@ -1,33 +1,32 @@
-@(UserProfileForm: Form[models.formdata.UserProfile])(implicit request: RequestHeader)
+@(userProfileFormView: Form[models.formdata.UserProfileForm])(implicit request: RequestHeader)
 
 <h1>Ändra användarprofil</h1>
-@import models.formdata.UserProfile
 
 @helper.form(action = routes.UserProfileController.saveUserProfile()) {
 
-    @if(UserProfileForm.hasGlobalErrors) {
+    @if(userProfileFormView.hasGlobalErrors) {
         <ul>
-        @UserProfileForm.globalErrors.foreach { error =>
+        @userProfileFormView.globalErrors.foreach { error =>
             <li>error.message</li>
         }
         </ul>
     }
 
-    @helper.inputText(UserProfileForm("userName"),
+    @helper.inputText(userProfileFormView("userName"),
         'id -> "userName",
         '_showErrors -> true,
         '_label -> "Användarnamn",
         '_help -> "Användarnamn får inte vara tomt"
     )
 
-    @helper.inputText(UserProfileForm("firstName"),
+    @helper.inputText(userProfileFormView("firstName"),
         'id -> "firstname",
         '_showErrors -> true,
         '_label -> "Förnamn",
         '_help -> "Förnamn"
     )
 
-    @helper.inputText(UserProfileForm("lastName"),
+    @helper.inputText(userProfileFormView("lastName"),
         'id -> "lastname",
         '_showErrors -> true,
         '_label -> "Efternammn",
@@ -36,14 +35,14 @@
 
 
 
-    @helper.inputText(UserProfileForm("idno"),
+    @helper.inputText(userProfileFormView("idno"),
         'id -> "idno",
         '_showErrors -> true,
         '_label -> "idno",
         '_help -> "Hidden value, visas endast under utveckling"
     )
 
-    @helper.inputText(UserProfileForm("aboutme"),
+    @helper.inputText(userProfileFormView("aboutme"),
         'id -> "aboutme",
         '_showErrors -> true,
         '_label -> "Beskrivning",
@@ -51,7 +50,7 @@
     )
 
 
-    @helper.inputText(UserProfileForm("emailAddress"),
+    @helper.inputText(userProfileFormView("emailAddress"),
         'id -> "emailAddress",
         '_label -> "E-postadress",
         '_showErrors -> true,
