- Better StackTrace (error messages) on Server-Error pages for debugging problems in production - Nullref-fixes on startpage

--- a/app/views/error/error.scala.html
+++ b/app/views/error/error.scala.html
@@ -25,9 +25,10 @@
                                         @errorString
                                     }
                                     @if(ex != null){
-                                        @ex.getMessage
+                                        <strong>Error Message:</strong> @ex.getMessage<br>
+                                        <strong>Request Uri:</strong> @request.uri
                                         <hr>
-                                        @ex.getStackTraceString
+                                        @ex.getCause.getStackTraceString
                                     }
                                 </div>
                             </div>
