- Fixed Host-image grayscale fade over in FireFox

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -805,11 +805,11 @@ input[type="reset"]:hover
 .host-image
 {
   display: block;
-  z-index:100;
+//  z-index:100;
   width: 100px;
   height:100px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
+//  background-position: 50% 50%;
+//  background-repeat: no-repeat;
   border:3px solid #fff;
   box-shadow: 1px 1px 4px #444;
 }
