--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -10,7 +10,7 @@
                         <div class="host-header">
                             <header>
                             <h2>@userProfile.profileLinkName</h2>
-                            <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("../../../public/images/host/host-head-example-100x100.jpg")')"></div>
+                            @shared.hostImageCircle()
                         </header>
                         </div>
                     </div>
