--- a/app/views/recipe/recipe.scala.html
+++ b/app/views/recipe/recipe.scala.html
@@ -10,7 +10,7 @@
                         <div class="host-header">
                             <header>
                                 <h2>Alexandra</h2>
-                                <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("images/host/host-head-example-100x100.jpg")')"></div>
+                                @shared.hostImageCircle()
                             </header>
                         </div>
                     </div>
