--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -419,20 +419,19 @@ input[type="reset"]:hover
 {
   position: relative;
   top:-7px;
-  border:1px solid darken(@hdc-green, 10%);
-  background-color: lighten(@hdc-green, 20%);
+  border:1px solid #fff;
+  background-color: darken(@hdc-green, 10%);
   border-radius: 5px;
   float:right;
   box-shadow: 0px 3px 3px #D0D0D0;
 }
 .quicklinks .nav > li > a {
-  padding:8px 10px;
-  font-size:12px;
-  color:@hdc-black;
+  font-size:13px;
+  color:#fff;
 }
 .quicklinks .nav > li > a:hover,
 .quicklinks .nav > li > a:focus {
-  background-color: lighten(@hdc-green, 30%);
+  background-color: lighten(@hdc-green, 5%);
 }
 
 // Header - Login form
@@ -696,7 +695,6 @@ input[type="reset"]:hover
   right:-16px;
   top:70px;
   display: inline-block;
-  overflow: hidden;
 }
 .panel-startpage .body
 {
@@ -802,7 +800,7 @@ input[type="reset"]:hover
 }
 
 // Host
-.host-image
+.host-image img
 {
   display: block;
 //  z-index:100;
@@ -925,7 +923,7 @@ input[type="reset"]:hover
   }
 
   // Header
-  .quicklinks .nav>li>a
+  .quicklinks .nav > li > a
   {
     padding: 8px 5px;
   }
