--- a/app/views/shared/hostImageCircle.scala.html
+++ b/app/views/shared/hostImageCircle.scala.html
@@ -1,2 +1,2 @@
 @(imagePath: String = routes.Assets.at("images/host/host-head-example-100x100.jpg").url, cssClass: String = "")
-<img src="@imagePath" class="img-circle grayscale grayscale-fade host-image @cssClass">
+<div class="host-image"><img src="@imagePath" class="img-circle grayscale grayscale-fade @cssClass"></div>
