--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -73,11 +73,12 @@
                                     '_help -> Messages("profile.create.form.phoneNumber.help")
                                 )
 
-                                @helper.select(EnvDataForm("county"),
-                                    optionsLocationAreas.get,
-                                    '_label -> Messages("profile.create.form.area")
-                                )
-
+                                @if(!optionsLocationAreas.isEmpty) {
+                                    @helper.select(EnvDataForm("county"),
+                                        optionsLocationAreas.get,
+                                        '_label -> Messages("profile.create.form.area")
+                                    )
+                                }
 
 
                             </li>
@@ -90,7 +91,9 @@
                     <div class="panel-body">
                         <label>@Messages("profile.create.form.tagwords")</label><br>
                         @for(t <- element) {
-                            <input type="checkbox" id="@t.name" name="@t.v" value="@t.name" @klass.getString(t.name)>&nbsp;<label for="@t.name" class="notbold">@t.name</label><br>
+                            <input type="checkbox" id="@t.name" name="@t.v" value="@t.name" @klass.getString(t.name)>
+                            &nbsp;
+                            <label for="@t.name" class="notbold">@t.name</label><br>
                         }
                     </div>
                 </div>
