--- a/app/views/error/error.scala.html
+++ b/app/views/error/error.scala.html
@@ -1,4 +1,4 @@
-@(errorString: String = "", ex: Throwable = null)(implicit request: RequestHeader)
+@(errorString: String = "", ex: Throwable = null, isAdmin: Boolean = false)(implicit request: RequestHeader)
 @theLink = { <a href="@routes.StartPageController.index()">@Messages("error.linkhome")</a> }
 
 @main(Messages("error.title")) {
@@ -11,7 +11,7 @@
                 </div>
                 <p>@Html(Messages("error.body", theLink))</p>
 
-                @if(ex != null || !errorString.isEmpty) {
+                @if((ex != null || !errorString.isEmpty) && isAdmin) {
                     <div class="panel-group big-margin-top" id="accordion">
                         <div class="panel panel-danger">
                             <div class="panel-heading">
@@ -28,7 +28,7 @@
                                         <strong>Error Message:</strong> @ex.getMessage<br>
                                         <strong>Request Uri:</strong> @request.uri
                                         <hr>
-                                        @ex.getCause.getStackTraceString
+                                        @ex.getStackTraceString
                                     }
                                 </div>
                             </div>
